$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-4 (opened November 1, 2008)

	* plot.cca: takes care that plotted items have non-NULL names that
	plot neatly.  This was already take care of with formula
	interface, but now it should work also in other cases in plots.
	
	* permatwsap: quasiswap method is implemented for count data based
	on the idea of Carsten Dormann in the swap.web::bipartite
	function. This takes a random matrix first with same row and
	column sums as the original (via r2dtable), and than restores the
	original matrix fill through steps of swaping 2x2 submatrices. The
	current R code is slow.

	* permatfull: when both cells and individuals are shuffled, the
	matrix fill remains constant.

	* nesteddisc: replaced with a new function that orders tied
	columns to minimize the discrepancy statistic. If there are <=7
	tied columns, all upto 5040 permutations are inspected, and if
	there are >7 tied columns, 5000 random permutations are
	inspected. The ties are inspected only if they could change order
	of columns within range of row sums (species richness). A warning
	with results is only printed if there were >7 tied columns that
	could influence the statistic, because in other cases the solution
	is certainly correct. The new function may be slow, and a more
	clever solution should be found (or nesteddisc dropped from
	vegan).  With this code, the discrepancy statistic of the 'sipoo'
	data is 50 (cf. notes on 1.16-3) instead of the original 55.

Version 1.16-3 (closed November 1, 2008)

	* spantree: saves labels of points, and 'cophenetic' and 'plot'
	use these labels. Function 'plot' uses 'ordilabel' for text
	labels.

	* orditkplot: added option to copy the current graph to a TIFF
	file. The capabilities("tiff") check was added in R-2.8.0, but the
	test works in R < 2.8.0 as well.

	* nesteddisc: Carsten Dormann (UFZ, Leipzig, Germany) turned my
	attention to the sensitivity of discrepancy to ties in column